--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "outDir": "lib/"
     },
     "files": [
         "src/index.ts"
