--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "hyper-background",
   "version": "1.3.0",
-  "description": "Change the background of your Hyper terminal (proof of concept).",
+  "description": "Change the background of your Hyper terminal!",
   "main": "lib/index.js",
   "scripts": {
     "test": "tsc && ava",
     "build": "webpack --progress",
-    "prepublish": "webpack"
+    "prepublish": "webpack",
+    "lint": "eslint . --ext .ts,.js"
   },
   "repository": {
     "type": "git",
@@ -24,22 +25,26 @@
   },
   "homepage": "https://github.com/RSG-Group/hyper-background#readme",
   "devDependencies": {
-    "@types/webpack": "^3.0.4",
+    "@types/webpack": "^3.0.8",
     "ava": "^0.21.0",
     "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^4.2.0",
-    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint": "^4.4.1",
+    "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-typescript": "^0.3.0",
-    "ts-loader": "^2.3.0",
-    "typescript": "^2.4.1",
-    "typescript-eslint-parser": "^4.0.0",
-    "webpack": "^3.3.0"
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-typescript": "^0.5.0",
+    "ts-loader": "^2.3.2",
+    "typescript": "^2.4.2",
+    "typescript-eslint-parser": "^5.0.1",
+    "webpack": "^3.5.4"
   },
   "ava": {
     "babel": "inherit",
     "require": [
       "babel-register"
     ]
-  }
+  },
+  "eslintIgnore": ["lib/"]
 }
