--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyper-background",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Change the background of your Hyper terminal!",
   "main": "lib/index.js",
   "scripts": {
@@ -46,5 +46,7 @@
       "babel-register"
     ]
   },
-  "eslintIgnore": ["lib/"]
+  "eslintIgnore": [
+    "lib/"
+  ]
 }
