Lessons learned, overabstraction = bad. Removed Webpack! Thanks @radicho, you inadvertently told me what to do :P Got the tests to pass. Sorry everyone, I finally fixed it! You can now relax, sit back and watch your background :^) For compensation, I'll be working on a slideshow feature cos' you guys deserve it.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "module": "es2015",
+        "module": "commonjs",
         "moduleResolution": "node",
         "jsx": "react",
         "target": "es2016",
