--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "tsc && ava",
-    "build": "webpack --progress",
-    "prepublish": "webpack",
+    "build": "tsc",
+    "prepublish": "tsc",
     "lint": "eslint . --ext .ts,.js"
   },
   "repository": {
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/RSG-Group/hyper-background#readme",
   "devDependencies": {
-    "@types/webpack": "^3.0.8",
+    "@types/node": "^8.0.25",
     "ava": "^0.21.0",
     "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.4.1",
@@ -35,10 +35,8 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-typescript": "^0.5.0",
-    "ts-loader": "^2.3.2",
     "typescript": "^2.4.2",
-    "typescript-eslint-parser": "^5.0.1",
-    "webpack": "^3.5.4"
+    "typescript-eslint-parser": "^5.0.1"
   },
   "ava": {
     "babel": "inherit",
