--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tsc && ava",
     "build": "tsc",
     "prepublish": "tsc",
-    "lint": "eslint . --ext .ts,.js && tsc --noEmit"
+    "lint": "eslint src --ext .ts,.js && tsc --noEmit"
   },
   "repository": {
     "type": "git",
@@ -24,20 +24,18 @@
     "url": "https://github.com/RSG-Group/hyper-background/issues"
   },
   "homepage": "https://github.com/RSG-Group/hyper-background#readme",
+  "packageManager": "yarn@3.0.2",
   "devDependencies": {
-    "@types/node": "^10.5.1",
-    "ava": "^1.0.0-beta.6",
-    "eslint": "^5.0.1",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "eslint-plugin-typescript": "^0.12.0",
-    "typescript": "^2.9.2",
-    "typescript-eslint-parser": "^16.0.1"
-  },
-  "eslintIgnore": [
-    "lib/"
-  ]
+    "@types/node": "^16.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "ava": "^3.15.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "typescript": "^4.4.3"
+  }
 }
