--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "removeComments": true,
         "preserveConstEnums": true,
         "sourceMap": true,
-        "outDir": "lib/"
+        "outDir": "lib/",
+        "checkJs": true
     },
     "files": [
         "src/index.ts"
