--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "hyper-background",
   "version": "1.6.0",
   "description": "Change the background of your Hyper terminal!",
-  "main": "lib/index.js",
+  "main": "index.js",
   "scripts": {
-    "test": "tsc && ava",
-    "build": "tsc",
-    "prepublish": "tsc",
-    "lint": "eslint src --ext .ts,.js && tsc --noEmit"
+    "test": "ava",
+    "lint": "eslint .",
+    "prepublish": "yarn lint && yarn test"
   },
   "repository": {
     "type": "git",
@@ -15,7 +14,6 @@
   },
   "keywords": [
     "hyper",
-    "typescript",
     "eslint"
   ],
   "author": "Ibrahim Ansari <ansari.ibrahim1@gmail.com>",
@@ -27,15 +25,12 @@
   "packageManager": "yarn@3.0.2",
   "devDependencies": {
     "@types/node": "^16.10.1",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
     "ava": "^3.15.0",
     "eslint": "^7.32.0",
-    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-config-standard": "^16.0.3",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "typescript": "^4.4.3"
+    "eslint-plugin-promise": "^5.1.0"
   }
 }
