--- a/package.json
+++ b/package.json
@@ -22,15 +22,14 @@
     "url": "https://github.com/RSG-Group/hyper-background/issues"
   },
   "homepage": "https://github.com/RSG-Group/hyper-background#readme",
-  "packageManager": "yarn@3.0.2",
+  "packageManager": "yarn@4.0.0-rc.53",
   "devDependencies": {
-    "@types/node": "^16.10.1",
-    "ava": "^3.15.0",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0"
+    "@types/node": "^20.8.6",
+    "ava": "^5.3.1",
+    "eslint": "^8.51.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
